# task-mania

./: .gitignore  Makefile  README.md  build.sh  desciption.txt  pyproject.toml  task_manager.sqlite3
locale/en/LC_MESSAGES/: django.mo  django.po
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: mixins.py  settings.py  urls.py  views.py  wsgi.py
task_manager/_test_utils/: _test_utils.py
task_manager/labels/: models.py  tests.py  urls.py  views.py
task_manager/labels/fixtures/: fixtures.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/statuses/: _tests.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/fixtures/: fixtures.py
task_manager/statuses/migrations/: 0001_initial.py  0002_alter_status_name.py
task_manager/tasks/: filters.py  mixins.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/fixtures/: fixtures.py
task_manager/tasks/migrations/: 0001_initial.py  0002_task_author_task_created_at_task_description_and_more.py  0003_alter_task_executor.py  0004_alter_task_description_alter_task_executor.py  0005_alter_task_author_alter_task_executor.py  0006_alter_task_options.py  0007_tasklabels_task_labels.py  0008_alter_task_labels.py  0009_alter_task_labels.py  resposne.html
task_manager/templates/: footer.html  index.html  layout.html  navigation.html  pagination.html
task_manager/templates/labels/: create.html  delete.html  index.html  (+1 more)
task_manager/templatetags/: tags.py
task_manager/users/: admin.py  forms.py  graph_models.html  mixins.py  models.py  tests.py  urls.py  views.py
(+22 files in other folders)
